# bbox-align

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
bbox_align/: __init__.py  bounding_box.py  geometry.py  main.py  relationships.py  types.py  utils.py  validations.py
tests/: __init__.py
