[project]
name = "bbox-align"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
    "ipython>=8.12.3",
    "jupyterlab>=4.3.7",
    "mypy>=1.14.1",
    "pillow>=10.4.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
